--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 </p>
 
                 <picture>
-                    <source media="(max-width: 670px)" srcset="imagens/navios-civis/sloop.png">
-                <img src="imagens/navios-civis/sloop.png" alt="Primeiro Navio">
+                    <source id="gr" media="(max-width: 670px)" srcset="imagens/navios-civis/sloop-pq.png">
+                <img id="pq" src="imagens/navios-civis/sloop.png" alt="Primeiro Navio">
                 </picture>
 
                 <p>
